--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fe-introduce-department": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-tsparticles": "^2.12.2",
     "tsparticles-slim": "^2.12.0"
