--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react-slick": "^0.30.2",
         "react-tsparticles": "^2.12.2",
         "slick-carousel": "^1.8.1",
+        "slider": "^1.0.4",
         "tsparticles-slim": "^2.12.0",
         "vite-plugin-babel-macros": "^1.0.6"
     },
@@ -39,7 +40,7 @@
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
         "postcss": "^8.4.47",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.14",
         "vite": "^5.4.1"
     }
 }
