--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "@react-spring/web": "^9.7.4",
         "@tailwindcss/line-clamp": "^0.4.4",
         "antd": "^5.21.1",
+        "axios": "^1.7.9",
         "fe-introduce-department": "file:",
+        "js-cookie": "^3.0.5",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-faq-component": "^1.3.4",
@@ -21,6 +23,7 @@
         "react-modal": "^3.16.1",
         "react-router-dom": "^6.26.2",
         "react-slick": "^0.30.2",
+        "react-toastify": "^11.0.3",
         "react-tsparticles": "^2.12.2",
         "slick-carousel": "^1.8.1",
         "slider": "^1.0.4",
