--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "axios": "^1.7.9",
         "fe-introduce-department": "file:",
         "js-cookie": "^3.0.5",
+        "lucide-react": "^0.475.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-faq-component": "^1.3.4",
