--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "antd": "^5.24.1",
         "axios": "^1.7.9",
         "fe-introduce-department": "file:",
+        "framer-motion": "^12.4.5",
         "js-cookie": "^3.0.5",
         "lucide-react": "^0.475.0",
         "react": "^18.3.1",
