--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "fe-introduce-department": "file:",
         "framer-motion": "^12.4.5",
         "js-cookie": "^3.0.5",
+        "jwt-decode": "^4.0.0",
         "lucide-react": "^0.475.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -30,7 +31,8 @@
         "react-tsparticles": "^2.12.2",
         "slick-carousel": "^1.8.1",
         "slider": "^1.0.4",
-        "swiper": "^11.1.14",
+        "swiper": "^11.2.6",
+        "tsparticles": "^3.8.1",
         "tsparticles-slim": "^2.12.0",
         "vite-plugin-babel-macros": "^1.0.6"
     },
