--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://be-aiot-lab-landing-page.onrender.com/
-# VITE_API_URL=http://localhost:8000
+VITE_API_URL=http://localhost:8000
+
+VITE_HOST=192.168.50.21
