--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dependencies": {
         "@react-spring/web": "^9.7.4",
         "@tailwindcss/line-clamp": "^0.4.4",
+        "@types/js-cookie": "^3.0.6",
         "antd": "^5.24.1",
         "antd-img-crop": "^4.24.0",
         "axios": "^1.7.9",
+        "cross-env": "^7.0.3",
         "fe-introduce-department": "file:",
         "framer-motion": "^12.4.5",
         "js-cookie": "^3.0.5",
